# src/main/resources/static/specification/openapi.yaml
@@ -27,6 +27,7 @@ paths:
   /signin:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     description: Authentication
     post:
       tags:
@@ -65,6 +66,7 @@ paths:
   /tokenRefresh:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     description: Token refresh
     post:
       summary: Token refresh
@@ -103,6 +105,7 @@ paths:
   /user:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     get:
       summary: Get current user info with list of organizations available to them
       operationId: authUserGet
@@ -158,6 +161,7 @@ paths:
   /orgs/{orgOguid}:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     get:
       summary: Get organization
@@ -178,6 +182,7 @@ paths:
   /orgs/{orgOguid}/users:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     summary: Organization user management
     get:
@@ -223,6 +228,7 @@ paths:
   /orgs/{orgOguid}/users/{userOguid}:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
       - $ref: '#/components/parameters/userOguid'
     description: User operations
@@ -301,6 +307,7 @@ paths:
   /orgs/{orgOguid}/availableModules:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     get:
       tags:
@@ -323,6 +330,7 @@ paths:
   /orgs/{orgOguid}/apps:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     get:
       tags:
@@ -367,6 +375,7 @@ paths:
   /orgs/{orgOguid}/apps/{appOguid}:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
       - $ref: '#/components/parameters/appOguid'
     get:
@@ -410,6 +419,7 @@ paths:
   /user/password:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     put:
       tags:
         - User
@@ -431,6 +441,7 @@ paths:
   /user/email/init:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     post:
       tags:
         - User
@@ -456,6 +467,7 @@ paths:
   /user/email/confirm:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     post:
       tags:
         - User
@@ -477,6 +489,7 @@ paths:
   /user/phone/init:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     post:
       tags:
         - User
@@ -502,6 +515,7 @@ paths:
   /user/phone/confirm:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
     post:
       tags:
         - User
@@ -523,6 +537,7 @@ paths:
   /orgs/{orgOguid}/departments:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     get:
       tags:
@@ -567,6 +582,7 @@ paths:
   /orgs/{orgOguid}/departments/{departmentOguid}:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
       - $ref: '#/components/parameters/departmentOguid'
     get:
@@ -622,6 +638,7 @@ paths:
   /orgs/{orgOguid}/logo:
     parameters:
       - $ref: '#/components/parameters/acceptLanguage'
+      - $ref: '#/components/parameters/correlationId' # added to support request tracking
       - $ref: '#/components/parameters/orgOguid'
     get:
       tags:
@@ -1426,6 +1443,14 @@ components:
         type: string
         default: en
       description: Tells the server which locale is preferred
+    correlationId:
+      name: Correlation-Id
+      in: header
+      required: false
+      schema:
+        type: string
+        pattern: '^[0-9A-Za-z]{8}$'
+      description: Header for request correlation # added
     orgOguid:
       in: path
       name: orgOguid
